--- a/bitcoin/Dockerfile
+++ b/bitcoin/Dockerfile
@@ -6,6 +6,7 @@ RUN apk add py3-qt5
 RUN pip3 install https://download.electrum.org/${ELECTRUM_VERSION}/Electrum-${ELECTRUM_VERSION}.tar.gz
 
 COPY docker-entrypoint.sh /usr/local/bin/
+RUN chmod +x /usr/local/bin/docker-entrypoint.sh
 ENTRYPOINT ["docker-entrypoint.sh"]
 
 EXPOSE 7000
