--- a/bitcoin/Dockerfile
+++ b/bitcoin/Dockerfile
@@ -6,8 +6,8 @@ RUN apk add py3-qt5
 RUN pip3 install https://download.electrum.org/${ELECTRUM_VERSION}/Electrum-${ELECTRUM_VERSION}.tar.gz
 
 COPY docker-entrypoint.sh /usr/local/bin/
-RUN chmod +x /usr/local/bin/docker-entrypoint.sh
-ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
+#RUN chmod +x /usr/local/bin/docker-entrypoint.sh
+ENTRYPOINT ["sh /usr/local/bin/docker-entrypoint.sh"]
 
 EXPOSE 7000
 CMD ["electrum"]
